# holdout

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: publish.yml  release-plz.yml
.omc/state/: agent-replay-fb87c020-3feb-47da-bca5-d1969842cc1a.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
assets/: demo.tape
benchmark/: RESULTS.md  run_gate.py  runner.py
benchmark/swebench/: DOCKER_RUN.md  FALSE_GREEN.md  README.md  fetch_by_id.py  fetch_instance.py  make_oracle.py  replay.py  report_to_results.py  run_adapter.sh  run_docker_eval.sh  test_runner.sh
benchmark/swebench/.omc/state/: agent-replay-fb87c020-3feb-47da-bca5-d1969842cc1a.jsonl  subagent-tracking.json
benchmark/swebench/evidence/: django-16485.utboost-report.json
benchmark/swebench/instances/calc/: false_calc.py  gold_calc.py  instance.json
benchmark/swebench/instances/calc/repo/: calc.py  test_calc.py
dogfood/: RESULTS.md  check  gen.py  reference.py
dogfood/.omc/state/: agent-replay-fb87c020-3feb-47da-bca5-d1969842cc1a.jsonl  last-tool-error.json  mission-state.json  subagent-tracking.json
launch/: LAUNCH_PLAYBOOK.md  lobsters.md  localllama.md  show_hn.md  terminal_trove.md  twitter.md  writeup.md
scaffold/: ci.yml.proposed
src/: candidate.rs  error.rs  grade.rs  lib.rs  oracle.rs  perturb.rs  procedure.rs  properties.rs  record.rs  runlog.rs  verify.rs
tests/: integration.rs  plan4.rs  properties.rs  record.rs  verify.rs
