[package]
name = "holdout"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
license = "MIT"
description = "A tamper-resistant, agent-facing verification oracle: grade a candidate against a sealed held-out suite it cannot read or edit."
readme = "README.md"
repository = "https://github.com/brevity1swos/holdout"
homepage = "https://github.com/brevity1swos/holdout"
keywords = ["testing", "verification", "agent", "oracle", "cli"]
categories = ["command-line-utilities", "development-tools::testing"]
exclude = ["/benchmark", "/dogfood", "/assets/demo.tape"]

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
anyhow = "1"

[[bin]]
name = "holdout"
path = "src/bin/holdout.rs"
